# srdatalog-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-bake.hcl  pyproject.toml  xmake.lua
docker/: Dockerfile  post_start.sh  test_wheel.sh
docs/: architecture.md  benchmarks.md  compile_performance.md  conf.py  cuda_pch_blocker.md  getting_started.md  index.md
examples/: andersen.py  crdt.py  cspa.py  ddisasm.py  debug_triangle.py  doop.py  doop_run.py  doop_viz_demo.ipynb  galen.py  gen_jit_code.py  lsqb_q3_triangle.py  lsqb_q6_2hop.py  lsqb_q6_bg_test.py  lsqb_q6_count.py  sg.py  (+11 more)
src/srdatalog/runtime/generalized_datalog/: CMakeLists.txt  ast.h  column.h  column.ipp  dist_relation_io.h  eytzinger.h  eytzinger.ipp  func_type_helper.h  hashmap.h  hashmap.ipp  hashtrie.h  hashtrie.ipp  helper.h  index.h  leapfrog_view.h  logging.h  logging_boost.h  mir.h  mir_compiler.h  mir_def.h  mir_dsl.h  mir_gpu.h  mir_plan.h  mir_printer.h  mpi_types.h  query.h  relation_col.h  relation_col.ipp  runtime.h  search.h  semiring.h  skip.h  soa_merge.h  sort.h  sorted_array_index.h  sorted_array_index.ipp  srdatalog.h  system.h  test_util.h  tmp.h  (+1 more)
src/srdatalog/runtime/generalized_datalog/benchmark/: andersen_benchmark.cpp  andersen_def.h  andersen_device_benchmark.cpp  bench_search_seek.cpp  benchmark_tvjoin_vs_lsm.cpp  cuda_test.cpp  index_benchmark.cpp  join_benchmark.cpp  merge_overhead_benchmark.cpp  reach_benchmark.cpp  runtime_tc_instantiation.cpp  runtime_tc_tvjoin_instantiation.cpp  sg_device_benchmark.cpp  sycl_test.cpp  tc_benchmark.cpp  tc_device_benchmark.cpp  tc_lower_device_benchmark.cpp  tc_lower_tvjoin_benchmark.cpp
src/srdatalog/runtime/generalized_datalog/cmake/: FindOpenMPI.cmake
src/srdatalog/runtime/generalized_datalog/gpu/: aos_device_array.h  build_hsa_stub.sh  cub_sort.h  deduplication.h  device_2level_index.h  device_array.h  device_array_rmm_impl.h  device_lsm_index.h  device_lsm_index.ipp  device_sorted_array_index.h  device_sorted_array_index.ipp  device_tvjoin_index.h  gpu_api.h  hsa_stub.c  index_concepts.h  index_ops.h  index_traits.h  init.h  macro.h  nd_device_array.h  rand.h  rmm_logger_stub.cpp  search.h  sort.h  tiling.h
src/srdatalog/runtime/generalized_datalog/gpu/adapter/: tvjoin_adapter.h
src/srdatalog/runtime/generalized_datalog/gpu/adapter/cuda_shim/cuda/: utility
src/srdatalog/runtime/generalized_datalog/gpu/runtime/: custom_set_op.h  deduplication.h  gpu_fixpoint_executor.h  gpu_fixpoint_executor_common.h  gpu_mir_helpers.h  launcher.h  output_context.h  pipeline_executor.h  pipeline_executor_base.h  query.h  root_executor.h  runtime.h  store.h  stream_pool.h  tmp_helpers.h
src/srdatalog/runtime/generalized_datalog/gpu/runtime/executor_impl/: executor_check_size.h  executor_compute_delta.h  executor_create_index.h  executor_execute_pipeline.h  executor_inject_cpp_hook.h  executor_insert_merge.h  executor_jit_execute_pipeline.h  executor_materialized_pipeline.h  executor_merge_index.h  executor_nested_plan.h  executor_post_stratum_reconstruct.h  executor_rebuild_index.h  executor_relation_ops.h
src/srdatalog/runtime/generalized_datalog/gpu/runtime/instructions/: instruction_aggregate.h  instruction_cartesian_join.h  instruction_column_join.h  instruction_destination_relation.h  instruction_filter.h  instruction_if_clause.h  instruction_let_clause.h  instruction_negation.h  instruction_scan.h
src/srdatalog/runtime/generalized_datalog/gpu/runtime/jit/: intersect_handles.h  jit_executor.h  jit_fanout_executor.h  materialized_join.h  speculative_helpers.h  tiny_sort_dedup.h  ws_infrastructure.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/cub/: config.cuh  util_debug.cuh  util_device.cuh  util_namespace.cuh  util_temporary_storage.cuh
src/srdatalog/runtime/generalized_datalog/gpu/shim/cub/block/: block_load.cuh  block_scan.cuh  block_store.cuh
src/srdatalog/runtime/generalized_datalog/gpu/shim/cub/detail/: detect_cuda_runtime.cuh  device_synchronize.cuh
src/srdatalog/runtime/generalized_datalog/gpu/shim/cuda/: cmath  stream_ref.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/cuda/std/__cccl/: cuda_capabilities.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/cuda/std/__type_traits/: void_t.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/hipcub/backend/rocprim/device/: device_scan.hpp
src/srdatalog/runtime/generalized_datalog/gpu/shim/nv/: target
src/srdatalog/runtime/generalized_datalog/gpu/shim/thrust/: cccl_compat.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/thrust/detail/: integer_types.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/thrust/system/cuda/: cuda_error_constants.h
src/srdatalog/runtime/generalized_datalog/gpu/shim/thrust/system/cuda/detail/: cccl_compat.h  dispatch.h
src/srdatalog/runtime/generalized_datalog/runtime/: aggregation.h  executor.h  io.h  iterator.h  query.h  runtime.h  state.h
src/srdatalog/runtime/generalized_datalog/test/: ada_load_balance.h  balanced_kernel.cuh  debug_type.h  test_ada_balance.cpp  test_ada_balance.cu  test_alias_template.cpp  test_aos_device_array.cpp  test_column.cpp  test_cub_sort.cpp  test_custom_set_op.cpp  test_debug.cpp  test_device_2level_index.cpp  test_device_2level_index_tc.cpp  test_device_sorted_array_index.cpp  test_device_sorted_array_index_clone.cpp  test_dist.cpp  test_dsl_syntax.cpp  test_eytzinger.cpp  test_gpu_append.cpp  test_gpu_enhanced_id.cpp  test_gpu_incomplete_materialize.cpp  test_gpu_negation.cpp  test_gpu_negation_native.cpp  test_gpu_pipeline_executor_let_if.cpp  test_gpu_query.cpp  test_gpu_runtime.cpp  test_gpu_search.cpp  test_gpu_semiring_atomic.cpp  test_gpu_sg.cpp  test_gpu_sg_deduplication.cpp  test_gpu_sg_fixpoint.cpp  test_gpu_sort.cpp  test_gpu_tmp.cpp  test_gpu_tvjoin_index.cpp  test_hashmap_index.cpp  test_highway.cpp  test_implicit_btree_index.cpp  test_io.cpp  test_materialized_join.cpp  test_mir_printer.cpp  (+17 more)
src/srdatalog/runtime/generalized_datalog/test/jit/: test_jit_executor.cpp
src/srdatalog/runtime/generalized_datalog/test/lsm/: test_lsm_index.cpp
(+768 files in other folders)
