[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srdatalog"
version = "0.1.0"
description = "Super-Reconfigurable Datalog — Python frontend with JIT C++/CUDA codegen"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SRDatalog Contributors" },
]
keywords = ["datalog", "gpu", "jit", "cuda", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff",
]

[project.scripts]
srdatalog = "srdatalog.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/srdatalog-python"
Issues = "https://github.com/anthropics/srdatalog-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/srdatalog"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the C++ runtime headers so callers can point the compiler at them
# via `srdatalog.runtime.runtime_include_path()`.
"src/srdatalog/runtime/generalized_datalog" = "srdatalog/runtime/generalized_datalog"

[tool.hatch.build.targets.sdist]
include = [
  "src/srdatalog",
  "tests",
  "examples",
  "xmake",
  "xmake.lua",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Make test-to-test imports (e.g., `from test_integration_triangle import build_triangle`)
# work by inserting tests/ on sys.path.
pythonpath = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter.

[dependency-groups]
dev = [
  "pytest>=7",
  "ruff",
]
