[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srdatalog"
version = "0.1.0"
description = "Super-Reconfigurable Datalog — Python frontend with JIT C++/CUDA codegen"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SRDatalog Contributors" },
]
keywords = ["datalog", "gpu", "jit", "cuda", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff",
]
docs = [
  "sphinx>=7",
  "furo",
  "myst-parser",
  "sphinx-autodoc2",
  "sphinx-copybutton",
]

[project.scripts]
srdatalog = "srdatalog.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/srdatalog-python"
Issues = "https://github.com/anthropics/srdatalog-python/issues"

# ---------------------------------------------------------------------------
# Wheel build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/srdatalog"]
# Packages scan picks up .py files under src/srdatalog/. We EXCLUDE the
# C++ runtime trees from that scan and re-add them via `force-include`
# below — otherwise the same files land in the wheel twice (once from
# the package scan, once from force-include) and hatchling emits
# ZipFile duplicate-name warnings.
exclude = [
  "src/srdatalog/runtime/generalized_datalog",
  "src/srdatalog/runtime/vendor",
]

[tool.hatch.build.targets.wheel.force-include]
# Always-bundled: our own runtime headers (1.5 MB).
"src/srdatalog/runtime/generalized_datalog" = "srdatalog/runtime/generalized_datalog"
# vendor/ is conditionally bundled by the build hook below — only
# present at wheel-build time, gitignored from source.

# Custom hook fetches boost/highway/RMM/spdlog into vendor/ before
# the wheel is assembled. Sdist builds skip the hook (small source dist).
[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

# ---------------------------------------------------------------------------
# Sdist
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.sdist]
include = [
  "src/srdatalog",
  "tests",
  "examples",
  "scripts",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
# Vendor is fetched at wheel-build time; never in sdist.
exclude = [
  "src/srdatalog/runtime/vendor",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Make test-to-test imports work by adding tests/ to sys.path.
pythonpath = ["tests"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2
# Skip the auto-generated tree (sphinx-autodoc2 output, build caches,
# the in-tree vendor tarball we fetch on build, and the Nim translator
# outputs which are regenerated from Nim sources).
extend-exclude = [
  "docs/_build", "docs/api",
  "src/srdatalog/runtime/vendor",
  "src/srdatalog/runtime/generalized_datalog",
  "build", "dist", "wheelhouse",
  ".venv", ".cache",
]

[tool.ruff.lint]
# E/F/W are pycodestyle + pyflakes core; I is isort (import sorting).
# UP is pyupgrade (auto-modernize to current target-version syntax).
# B is flake8-bugbear (common correctness traps).
# SIM is flake8-simplify (readability). RUF is ruff-specific.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",    # line-length (we don't hard-wrap; let the formatter decide)
  "SIM108",  # ternary-vs-if (ternaries aren't always clearer)
  "SIM102",  # collapsible-if (nested-if is often more readable)
  "SIM110",  # reimplemented-builtin (explicit loops are often clearer than any/all)
  "SIM101",  # duplicate-isinstance-call (splitting by class is often clearer)
  "SIM115",  # open-file-with-context-handler (tolerated in scripts that stream)
  "SIM401",  # if-else-block-instead-of-dict-get (explicit ifs read better for 2-branch logic)
  "B005",    # strip-with-multi-chars (we know what we're stripping)
  "B007",    # unused-loop-control-variable (`for _, x in enumerate(...)` pattern)
  "B008",    # Do not perform function call in argument defaults (dataclass field())
  "B006",    # mutable-argument-default — tolerated in long-lived caller-provided lists
  "B905",    # zip-without-explicit-strict (we know inputs are same length)
  "E402",    # module-import-not-at-top (sys.path hacks in scripts need this)
  "E731",    # lambda-assignment (short lambdas are fine as named callbacks)
  "E741",    # ambiguous-name (`l` / `I` / `O` are fine in short local scopes)
  "F403",    # `from X import *` — deliberate in mir/hir re-exports
  "F405",    # "may be undefined from import *" — false positives on our star-imports
  "F841",    # unused local — some emit paths compute then conditionally use
  "SIM113",  # enumerate-for-loop — explicit counters are readable enough
  "RUF002",  # ambiguous unicode in docstrings (we use — em-dash deliberately)
  "RUF003",  # ambiguous unicode in comments (same reason)
  "RUF005",  # `[a] + list(b)` → `[a, *b]` (either form is fine)
  "RUF013",  # implicit-Optional (legacy stubs; fix opportunistically)
  "RUF022",  # unsorted-dunder-all (our order mirrors logical grouping, not alphabet)
  "RUF059",  # unused-unpacked-variable (_, _, x = ...) is clearer than slicing
  "UP007",   # non-pep604-annotation-union — both `Union[X,Y]` and `X|Y` are fine on py310+
  "UP045",   # non-pep604-annotation-optional — same
  "UP038",   # isinstance(x, A|B) — runtime cost is real; tuple form is correct
             # (this rule was removed in ruff 0.11+ for the same reason).
  "W291",    # trailing-whitespace — the formatter fixes real cases, these are in strings
  "W293",    # blank-line-with-whitespace — same
]
# Allow unused imports in __init__.py (re-exports).
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
# Auto-generated benchmark programs — the translator declares every var
# referenced anywhere in the Nim source, some of which are unused in
# trimmed-down rule sets. Not worth fixing by hand on regenerate.
"examples/*.py" = ["F401", "F841", "E402"]
# Tests use `import *` to pull in DSL factories en masse, and aggressive
# short names (`l`, `I`, `O`) are fine in fixture-heavy code.
"tests/**" = ["F403", "F405", "F841", "E741"]
# The translator + validator build lookups via `import *`-style patterns
# and intentionally defer sys.path tweaks before importing.
"tools/*.py" = ["F403", "F405", "E402"]

[tool.ruff.format]
# Match the existing codebase style — 2-space indent, preserve the
# single-quote docstrings we've been writing. Don't reshuffle quotes
# inside strings.
indent-style = "space"
quote-style = "preserve"
docstring-code-format = true
docstring-code-line-length = 80

# ---------------------------------------------------------------------------
# uv dev group
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
  "pytest>=7",
  "ruff",
  "cibuildwheel>=2.20",
]
docs = [
  "sphinx>=7",
  "furo",
  "myst-parser",
  "sphinx-autodoc2",
  "sphinx-copybutton",
]

# ---------------------------------------------------------------------------
# cibuildwheel — build wheels on Linux x86_64 + aarch64.
# CUDA wheels are not built in CI (CUDA toolkit too heavy for runners);
# the ON-DISK header subset is what the wheel ships, end users supply
# CUDA themselves at compile time.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32 *_i686 pp*"
build-verbosity = 1

# Run the populate hook once per build; it's cached afterward inside
# the cibuildwheel container via the same _verify_sha + .version
# marker logic.
test-command = "python -c 'import srdatalog; print(srdatalog.__version__)'"
test-skip = ""

[tool.cibuildwheel.linux]
# Manylinux container with build tools; CUDA NOT installed here.
# Full Quay URI — a bare name like "manylinux_2_28_x86_64" gets looked
# up on Docker Hub and fails with "pull access denied". cibuildwheel
# also accepts the alias "manylinux_2_28" (arch inferred), but the
# explicit URI is more grep-able.
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
# aarch64 image commented out until the CI matrix re-adds ubuntu-arm;
# keeping the URI here as documentation for when that milestone lands.
# manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"

# macOS config removed — no CUDA toolkit for macOS since 11.6 (2021),
# so a GPU wheel there would ship broken artifacts. Restore this
# section under the CPU-only engine milestone:
#   [tool.cibuildwheel.macos]
#   archs = ["x86_64", "arm64"]
